--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,5 @@
-[package]
-name = "gust"
-version = "0.1.0"
-authors = ["alex <alexandre.fourcat@epitech.eu>"]
-
-[dependencies]
-gl = "0.10.0"
-nalgebra = "0.15.0"
-image = "0.19.0"
-
-[dependencies.glfw]
-git = "https://github.com/bjz/glfw-rs.git"
+[workspace]
+members = [
+	"gust",
+	"gust_example",
+]
