--- a/gust/Cargo.toml
+++ b/gust/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["alex <alexandre.fourcat@epitech.eu>"]
 gl = "0.10.0"
 nalgebra = "0.15.0"
 image = "0.19.0"
+lazy_static = "1.1.0"
 
 [dependencies.glfw]
 git = "https://github.com/bjz/glfw-rs.git"
