--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,15 @@
-[workspace]
-members = [
-	"gust",
-	"gust_example",
-]
+[package]
+name = "gust"
+version = "0.1.0"
+authors = ["alex <alexandre.fourcat@epitech.eu>"]
+autoexamples = true
+
+[dependencies]
+gl = "0.10.0"
+nalgebra = "0.15.0"
+image = "0.19.0"
+lazy_static = "1.1.0"
+
+[dependencies.glfw]
+git = "https://github.com/bjz/glfw-rs.git"
+
