Adding update to apt-get.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ rust-latest:
   stage: build
   image: rust:latest
   script:
+    - apt-get update
     - apt-get install cmake
     - cargo build --verbose
     - cargo test --verbose
@@ -13,6 +14,7 @@ rust-nightly:
   stage: build
   image: rustlang/rust:nightly
   script:
+    - apt-get update
     - apt-get install cmake
     - cargo build --verbose
     - cargo test --verbose
