--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ rust-latest:
   image: rust:latest
   script:
     - apt-get update
-    - apt-get install cmake
+    - apt-get install -y cmake
     - cargo build --verbose
     - cargo test --verbose
 
@@ -15,7 +15,7 @@ rust-nightly:
   image: rustlang/rust:nightly
   script:
     - apt-get update
-    - apt-get install cmake
+    - apt-get install -y cmake
     - cargo build --verbose
     - cargo test --verbose
   allow_failure: true
