--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ rust-latest:
   script:
     - apt-get update
     - apt-get install -y cmake
+    - apt-get install -y xorg-dev libglu1-mesa-dev
     - cargo build --verbose
     - cargo test --verbose
 
@@ -15,7 +16,7 @@ rust-nightly:
   image: rustlang/rust:nightly
   script:
     - apt-get update
-    - apt-get install -y cmake
+    - apt-get install -y cmake xorg-dev libglu1-mesa-dev
     - cargo build --verbose
     - cargo test --verbose
   allow_failure: true
