--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ gl = "0.10.0"
 nalgebra = "0.15.0"
 image = "0.19.0"
 lazy_static = "1.1.0"
+freetype-rs = { git = "https://github.com/PistonDevelopers/freetype-rs" }
 
 [dependencies.glfw]
 git = "https://github.com/bjz/glfw-rs.git"
