Test with new shader handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ freetype-rs = { git = "https://github.com/PistonDevelopers/freetype-rs" }
 [dependencies.glfw]
 git = "https://github.com/bjz/glfw-rs.git"
 
-debug=true
+[profile.release]
+debug = true
 
