--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "gust"
+name = "gust-render"
 version = "0.2.0"
-authors = ["alex <alexandre.fourcat@epitech.eu>"]
+authors = ["afourcat <alexandre.fourcat@epitech.eu>"]
 description = "Gust is a simple 2D graphical library inspired by SFML."
 repository = "https://github.com/Afourcat/Gust/tree/master"
 homepage = "https://afourcat.github.io/Gust/"
