--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,10 @@ maintenance = { status = "experimental" }
 autoexamples = true
 
 [dependencies]
-gl = "*"
-nalgebra = "*"
-image = "*"
-lazy_static = "*"
-freetype-rs = "*"
-rayon = "*"
-crossbeam = "*"
-alga = "*"
-glfw = "*"
+gl = "0.11.0"
+nalgebra = "0.16.11"
+lazy_static = "1.2.0"
+image = "0.20.1"
+freetype-rs = "0.19.0"
+alga = "0.7.2"
+glfw = "0.25.0"
