--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,14 @@ categories = ["rendering::engine", "rendering"]
 license-file = "LICENSE"
 maintenance = { status = "experimental" }
 autoexamples = true
+edition = "2018"
 
 [dependencies]
-gl = "0.11.0"
-nalgebra = "0.16.11"
-lazy_static = "1.2.0"
-image = "0.20.1"
-freetype-rs = "0.19.0"
-alga = "0.7.2"
-glfw = "0.25.0"
+gl = "0.*"
+nalgebra = "0.*"
+lazy_static = "1.*"
+image = "0.*"
+freetype-rs = "0.*"
+alga = "0.*"
+glfw = "0.*"
+
